--- a/stories/tl/0111_bakit-walang-buhok-ang-mga-hippo.html
+++ b/stories/tl/0111_bakit-walang-buhok-ang-mga-hippo.html
@@ -45,7 +45,7 @@
 
 <h1 id="bakit-walang-buhok-ang-mga-hippo">Bakit walang buhok ang mga hippo</h1>
 
-Basilio Gimo, David Ker<br>English</div><div class="pagebreak">
+Basilio Gimo, David Ker<br>Tagalog</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
 
@@ -98,12 +98,12 @@ Basilio Gimo, David Ker<br>English</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
 
-<p>Iyan ang dahilan kung bakit hindi lumalayo ang hippo mula sa tubig, dahil sa takot niyang maliyaban ni Apoy. Nagsaya si Kuneho nang masunog si Hippo at sinabi, “Nakaganti rin ako!”</p>
+<p>Natuwa ang kuneho nang masunog ang buhok ni Hippo. At hanggang ngayon, dahil sa takot sa apoy, ang hippo ay hindi na malalayo sa tubig kailanman.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Basilio Gimo, David Ker<br /><strong>Illustrations:</strong> Carol Liddiment<br /><strong>Translation:</strong> Karla Comanda<br /><strong>Language:</strong> English</p>
+<p><strong>Text:</strong> Basilio Gimo, David Ker<br /><strong>Illustrations:</strong> Carol Liddiment<br /><strong>Translation:</strong> Karla Comanda<br /><strong>Language:</strong> Tagalog</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/why-hippos-have-no-hair">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
