--- a/stories/tl/0111_bakit-walang-buhok-ang-mga-hippo_slides.html
+++ b/stories/tl/0111_bakit-walang-buhok-ang-mga-hippo_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p>Iyan ang dahilan kung bakit hindi lumalayo ang hippo mula sa tubig, dahil sa takot niyang maliyaban ni Apoy. Nagsaya si Kuneho nang masunog si Hippo at sinabi, &quot;Nakaganti rin ako!&quot;</p>
+<p>Natuwa ang kuneho nang masunog ang buhok ni Hippo. At hanggang ngayon, dahil sa takot sa apoy, ang hippo ay hindi na malalayo sa tubig kailanman.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="bakit-walang-buhok-ang-mga-hippo-1">Bakit walang buhok ang mga hippo</h2>
-<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Karla Comanda<br> <strong>Language:</strong> English<br>
+<strong>Text:</strong> Basilio Gimo, David Ker<br> <strong>Illustrations:</strong> Carol Liddiment<br> <strong>Translation:</strong> Karla Comanda<br> <strong>Language:</strong> Tagalog<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
