--- a/stories/de/0095_zama-ist-toll.html
+++ b/stories/de/0095_zama-ist-toll.html
@@ -84,7 +84,7 @@ Michael Oguttu<br>Deutsch</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>Ma erinnert mich: “Verigss Deine Zähne nicht.” Ich antworte: “Niemals, ich doch nicht!”</p>
+<p>Ma erinnert mich: “Vergiss Deine Zähne nicht.” Ich antworte: “Niemals, ich doch nicht!”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
