--- a/stories/index.html
+++ b/stories/index.html
@@ -71,60 +71,32 @@
   <h2>List of translated stories by language</h2>
   
 <div class="tocbox">
-<li class="toc"><a href="#arabic">Arabic [العربية]</a></li><br>
-
+<ul><li class="toc"><a href="#arabic">Arabic [العربية]</a></li><br>
 <li class="toc"><a href="#bengali">Bengali [বাংলা]</a></li><br>
-
 <li class="toc"><a href="#cantonese">Cantonese [粵語]</a></li><br>
-
 <li class="toc"><a href="#chinese-mandarin">Chinese (Mandarin) [中文]</a></li><br>
-
 <li class="toc"><a href="#danish">Danish [dansk]</a></li><br>
-
 <li class="toc"><a href="#dutch">Dutch [Nederlands]</a></li><br>
-
 <li class="toc"><a href="#esperanto">Esperanto [Esperanto]</a></li><br>
-
 <li class="toc"><a href="#german">German [Deutsch]</a></li><br>
-
 <li class="toc"><a href="#gujarati">Gujarati [ગુજરાતી]</a></li><br>
-
 <li class="toc"><a href="#hindi">Hindi [हिन्दी]</a></li><br>
-
 <li class="toc"><a href="#italian">Italian [Italiano]</a></li><br>
-
 <li class="toc"><a href="#jamaican-creole">Jamaican Creole [Patwa]</a></li><br>
-
 <li class="toc"><a href="#japanese">Japanese [日本語]</a></li><br>
-
 <li class="toc"><a href="#korean">Korean [한국어]</a></li><br>
-
 <li class="toc"><a href="#malay">Malay [Bahasa Melayu]</a></li><br>
-
 <li class="toc"><a href="#nepali">Nepali [नेपाली]</a></li><br>
-
 <li class="toc"><a href="#norwegian">Norwegian [norsk]</a></li><br>
-
 <li class="toc"><a href="#norwegian-nynorsk">Norwegian (Nynorsk) [nynorsk]</a></li><br>
-
 <li class="toc"><a href="#odia">Odia [ଓଡ଼ିଆ]</a></li><br>
-
 <li class="toc"><a href="#persian">Persian [فارسی]</a></li><br>
-
 <li class="toc"><a href="#punjabi">Punjabi [ਪੰਜਾਬੀ]</a></li><br>
-
 <li class="toc"><a href="#russian">Russian [Русский]</a></li><br>
-
 <li class="toc"><a href="#spanish">Spanish [Español]</a></li><br>
-
 <li class="toc"><a href="#swedish">Swedish [svenska]</a></li><br>
-
 <li class="toc"><a href="#tagalog">Tagalog [Tagalog]</a></li><br>
-
-<li class="toc"><a href="#tunisian-arabic">Tunisian Arabic [Tounsi]</a></li><br>
-
-<ol>
-</ol></div>
+<li class="toc"><a href="#tunisian-arabic">Tunisian Arabic [Tounsi]</a></li><br></ul></div>
   <h3><a name='arabic'>Arabic [العربية]</a></h3>
    <ul><table>
   <thead>
@@ -2867,6 +2839,12 @@
       <td><a name="tl0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0327</td>
+      <td><a href="/stories/tl/0327_pagbibilang-ng-mga-hayop_slides.html" target="_blank">Pagbibilang ng mga Hayop</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbscXJCbTFZX1kzc00"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="tl0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0337</td>
       <td><a href="/stories/tl/0337_mga-batang-sera_slides.html" target="_blank">Mga Batang Sera</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbscXJCbTFZX1kzc00"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3417,7 +3395,7 @@
       <td>0327</td>
       <td><a href="http://my.africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0327">es</a></td>
+      <td><a href="#es0327">es</a>, <a href="#tl0327">tl</a></td>
     </tr>
     <tr>
       <td>0331</td>
