--- a/stories/no/0111_hvorfor-flodhester-ikke-har-hår.html
+++ b/stories/no/0111_hvorfor-flodhester-ikke-har-hår.html
@@ -84,7 +84,7 @@ Basilio Gimo, David Ker<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
 
-<p>Senere spiste Flodhest gress langt fra elvebredden da det plutselig sa “visj!” Ild ble til flammer. Flammene begynte å brenne hårene til Flodhest.</p>
+<p>Senere spiste Flodhest gress langt fra elvebredden da det plutselig sa “svisj!” Ild ble til flammer. Flammene begynte å brenne håret til Flodhest.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,8 @@ Basilio Gimo, David Ker<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
 
-<p>Det er derfor flodhesten aldri drar langt fra vannet – den er redd for å bli brent av ilden. Kanin var veldig glad da Flodhest ble brent, og sa: “Der fikk hun igjen!”</p>
+<p>Kanin var glad for at håret til Flodhest brant.
+Og til denne dag, av frykt for vannet, går ikke flodhesten langt fra vannet.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
