--- a/stories/de/0095_zama-ist-toll_slides.html
+++ b/stories/de/0095_zama-ist-toll_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>Ma erinnert mich: &quot;Verigss Deine Zähne nicht.&quot; Ich antworte: &quot;Niemals, ich doch nicht!&quot;</p>
+<p>Ma erinnert mich: &quot;Vergiss Deine Zähne nicht.&quot; Ich antworte: &quot;Niemals, ich doch nicht!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
