--- a/stories/tl/0327_pagbibilang-ng-mga-hayop_slides.html
+++ b/stories/tl/0327_pagbibilang-ng-mga-hayop_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Hvorfor flodhester ikke har hår - Global African Storybook</title>
+  <title>Pagbibilang ng mga Hayop - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="hvorfor-flodhester-ikke-har-hår" class="slide level1">
-<h1>Hvorfor flodhester ikke har hår</h1>
+<section id="pagbibilang-ng-mga-hayop" class="slide level1">
+<h1>Pagbibilang ng mga Hayop</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
-<p>En dag gikk Kanin langs elvebredden.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
+<p>Isang elepante ang iinom ng tubig.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
-<p>Flodhest var der også. Han gikk en tur og spiste litt fint grønt gress.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
+<p>Dalawang dyirap ang iinom ng tubig.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>Flodhest så ikke at Kanin var der og hun tråkka uheldigvis på foten til Kanin. Kanin skrek og begynte og rope til Flodhest: &quot;Hei Flodhest! Kan du ikke se at du tråkker på foten min?&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
+<p>Tatlong kalabaw at apat na ibon ang iinom ng tubig.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>Flodhest ba om unnskyldning til Kanin: &quot;Jeg er lei meg, vennen min, jeg så deg ikke. Vær så snill å tilgi meg!&quot; Men Kanin ville ikke høre, og han ropte til Flodhest: &quot;Du gjorde det med vilje! En dag kommer du til å få se! Dette kommer til å straffe seg!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
+<p>Limang impala at anim na baboy-ramo ang papunta sa tubig.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>Da dro Kanin for å finne Ild, og han sa: &quot;Dra og brenn Flodhest når hun kommer ut av vannet for å spise gress. Hun tråkka på meg!&quot; Ild svarte: &quot;Ikke noe problem, Kanin, vennen min. Jeg skal gjøre akkurat det du ba meg om.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/06.jpg" /></p>
+<p>Pitong zebra ang tumatakbo papunta sa tubig.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>Senere spiste Flodhest gress langt fra elvebredden da det plutselig sa &quot;svisj!&quot; Ild ble til flammer. Flammene begynte å brenne håret til Flodhest.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
+<p>Walong palaka at siyam na isda ang lumalangoy sa tubig.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
-<p>Flodhest begynte å gråte og løp mot vannet. Alt håret hennes brant opp i ilden. Flodhest gråt: &quot;Håret mitt har brent bort i ilden! Du brente alt håret mitt! Håret mitt er borte! Det vakre, vakre håret mitt!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
+<p>Isang leon ang umatungal. Gusto rin niyang uminom ng tubig. Sino ang takot sa leon?</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p>Kanin var glad for at håret til Flodhest brant. Og til denne dag, av frykt for vannet, går ikke flodhesten langt fra vannet.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
+<p>Isang elepante ang umiinom kasama ng leon.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="hvorfor-flodhester-ikke-har-hår-1">Hvorfor flodhester ikke har hår</h2>
-<strong>Tekst:</strong> Basilio Gimo, David Ker<br> <strong>Illustrasjoner:</strong> Carol Liddiment<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<h2 id="pagbibilang-ng-mga-hayop-1">Pagbibilang ng mga Hayop</h2>
+<strong>Text:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>Illustrations:</strong> Rob Owen<br> <strong>Translation:</strong> La Trinidad Mina<br> <strong>Language:</strong> Tagalog<br>
 <p>
-Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/why-hippos-have-no-hair'>her</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/counting-animals'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
