--- a/stories/master.html
+++ b/stories/master.html
@@ -1065,7 +1065,7 @@
     </tr>
     <tr>
       <td>0199</td>
-      <td><a href="http://my.africanstorybook.org/stories/apedori-%C9%9B%C9%94ng-aswam-n%CA%89-i-can-do">Apedori ɛɔng aswam nʉ / I can do this</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/apedori-%C9%9B%C9%94ng-aswam-n%CA%89-i-can-do">I can do this</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
@@ -1095,7 +1095,7 @@
     </tr>
     <tr>
       <td>0205</td>
-      <td><a href="http://my.africanstorybook.org/stories/sound-aaa">sound Aaa</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/sound-aaa">Sound Aaa</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
