--- a/stories/index.html
+++ b/stories/index.html
@@ -1402,6 +1402,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0001</td>
+      <td><a href="/stories/hi/0001_एक-बहुत-लम्बा-आदमी।_slides.html" target="_blank">एक बहुत लम्बा आदमी।</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hi0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/hi/0087_मै-पढ़ना-चाहता-हूँ_slides.html" target="_blank">मैं पढ़ना चाहता हूँ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2909,7 +2915,7 @@
       <td>0001</td>
       <td><a href="http://my.africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#hi0001">hi</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
@@ -3219,7 +3225,7 @@
     </tr>
     <tr>
       <td>0199</td>
-      <td><a href="http://my.africanstorybook.org/stories/apedori-%C9%9B%C9%94ng-aswam-n%CA%89-i-can-do">Apedori ɛɔng aswam nʉ / I can do this</a></td>
+      <td><a href="http://my.africanstorybook.org/stories/apedori-%C9%9B%C9%94ng-aswam-n%CA%89-i-can-do">I can do this</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#yue0199">yue</a>, <a href="#zh0199">zh</a></td>
     </tr>
